<resources>
    <string name="app_name">DepansMwen</string>
    <string name="slogan">Anrejistre tout depans wap fe</string>
    <string name="text_sign_in">Se Connecter</string>
    <string name="pseudo">Pseudo</string>
    <string name="votre_pseudo">votre pseudo</string>
    <string name="password_hint">**********</string>
    <string name="password">password</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="user_new_account">Nouveau Compte Utilisateur</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="username_hint">Pierre Etienne</string>
    <string name="pseudo_hint">Pierro7</string>
    <string name="username">Username</string>
    <string name="votre_email">Votre Email</string>
    <string name="mail">Email</string>
    <string name="confpassword">Confirm Password</string>
    <string name="already_have_account">Already have accout</string>
    <string name="msg_champVide">Remplissez tout les Champs</string>
    <string name="msg_succes_creation_compte">Compte Utilisateur Cree !!</string>
    <string name="msg_echec_creation_compte">La creation du compte a echoue</string>
    <string name="msg_pseudo_already_use">Pseudo deja Utilise</string>
    <string name="msg_password_not_same">Les mots de passe ne concordent pas</string>
    <string name="msg_connection_reussi">Utilisateur Connecte avec succes</string>
    <string name="msg_connection_echec">Pseudo/password incorrect</string>
    <string name="compte">Compte</string>
    <string name="transaction">Transaction</string>
    <string name="rapport_statistique">Rapport Statistique</string>
    <string name="welcome">Bonjour, </string>
    <string name="user_logon_profil_picture">user logon profil picture</string>
    <string name="menu_icon">menu icon</string>
    <string name="account_number">Nombre de Compte</string>
    <string name="bank_account_cashout">Montant Bancaire Dépensé</string>
    <string name="cash_cashout">Montant Cash Dépensé</string>
    <string name="searchAccountPlaceholder">Rechercher un Compte</string>
    <string name="dashboard">Dashboard</string>
    <string name="cash">Cash</string>
    <string name="add_cash">Ajouter du Cash</string>
    <string name="close_button_add_cash">Bouton Fermeture add Cash</string>
    <string name="cash_add_description">Description</string>
    <string name="cash_add_amount">Montant</string>
    <string name="btn_save">Save</string>
    <string name="b_w_logo_depansmwen">Black and white logo DepansMwen</string>
    <string name="cash_update_description">Description</string>
    <string name="update_cash">Modification Infos Cash</string>
    <string name="searchCashPlaceholder">Rechercher un cash</string>
    <string name="msg_montantIcorect">Montant Incorrect</string>
    <string name="msg_cashInsert">Cash Insere avec Succes</string>
    <string name="msg_cashFailed">Echec d\'insertion de votre Cash</string>
    <string name="add_account_btn">Ajouter un Compte</string>
    <string name="msg_AccountInsert">Account insert With success</string>
</resources>