<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccountListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/welcomeSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp">

            <ImageView
                android:layout_width="66.18dp"
                android:layout_height="66.18dp"
                android:background="@drawable/ic_account_circle"
                android:contentDescription="@string/user_logon_profil_picture" />

            <TextView
                android:id="@+id/homeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pseudo_hint"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeSets">

            <EditText
                android:layout_width="0dp"
                android:layout_height="46.18dp"
                android:layout_weight="1"
                android:background="null"
                android:hint="@string/searchAccountPlaceholder"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <ImageView
                android:layout_width="46.18dp"
                android:layout_height="46.18dp"
                android:background="@drawable/search_icon_background"
                android:padding="6.18px"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/app_name"
                app:tint="@color/primary" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>